--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native-stack": "^6.9.4",
-    "@react-navigation/stack": "^6.3.7",
+    "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/native": "^6.1.0",
+    "@react-navigation/native-stack": "^6.9.5",
+    "@react-navigation/stack": "^6.3.8",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
