--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
+    "react-native-paper": "^5.0.1",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
   },
