--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "@react-navigation/stack": "^6.3.8",
     "expo": "~47.0.8",
+    "expo-asset": "~8.6.2",
+    "expo-file-system": "~15.1.1",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-paper": "^5.0.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
