--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~47.0.8",
     "expo-asset": "~8.6.2",
     "expo-file-system": "~15.1.1",
+    "expo-notifications": "~0.17.0",
     "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "lottie-react-native": "^5.1.4",
@@ -25,7 +26,7 @@
     "react-native": "0.70.5",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-paper": "^5.0.1",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
   },
