--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
-    "@react-native-community/datetimepicker": "^6.7.1",
-    "@react-navigation/native": "^6.1.0",
-    "@react-navigation/native-stack": "^6.9.5",
-    "@react-navigation/stack": "^6.3.8",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.6",
+    "@react-navigation/stack": "^6.3.9",
     "expo": "~47.0.8",
     "expo-asset": "~8.6.2",
+    "expo-cli": "^6.0.8",
     "expo-file-system": "~15.1.1",
     "expo-notifications": "~0.17.0",
     "expo-sqlite": "~11.0.0",
